# LM-Studio-Hybrid-Search-Engine

./: Cargo.toml  GEMINI.md  README.md  check_db.py  epub_to_txt.py  extract_zim.py  fix_gguf_arch.py  gemini_mcp_bridge.py  imdds_truth_filter.py  install-deps.sh  mcp_server.py  proxy_server.py  rivermind_config.yaml
mcp_rs/: Cargo.toml
mcp_rs/src/: main.rs
src/: knowledge_h5.rs  main.rs
src/retrieval/: bm25.rs  fuzzy.rs  mod.rs
vector_explorer_rs/: Cargo.toml
vector_explorer_rs/shaders/: point_cloud.wgsl
vector_explorer_rs/src/: camera.rs  data.rs  main.rs  point_cloud.rs  renderer.rs  search.rs  ui.rs
