[package]
name = "offlinerag"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "4.0.17"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.22"
rapidfuzz = "0.5.0"
strsim = "0.11.1"
hound = "3.5"
clap = { version = "4.6.0", features = ["derive"] }
hdf5 = { package = "hdf5-metno", version = "0.11", features = ["static"] }
ndarray = "0.16"
text-splitter = "0.13"
csv = "1.4.0"
zim = "0.4.0"
html2text = "0.16.7"

